--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,19 @@
-development:
-  adapter: sqlite3
-  database: db/beer_development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/beer_test.sqlite3
-
-production:
-  adapter: mysql2
+default: &default  
+  adapter: postgresql
   pool: 5
-  timeout: 5000
-  username: root
-  password: <%= ENV['DB_ENV_MYSQL_ROOT_PASSWORD'] %>
-  host: 'db'
-  database: beer_production
+  username: postgres
+  password: <%= ENV["DB_ENV_POSTGRES_PASSWORD"] %>
+  host: <%= ENV["DB_PORT_5432_TCP_ADDR"] %>
+  port: <%= ENV["DB_PORT_5432_TCP_PORT"] %>
+
+development:  
+  <<: *default
+  database: myapp_development
+
+test:  
+  <<: *default
+  database: myapp_test
+
+production:  
+  <<: *default
+  database: myapp_production
